--- a/actions/set_eo_limits.yaml
+++ b/actions/set_eo_limits.yaml
@@ -1,13 +1,12 @@
 ---
-    name: "set_eo_limits"
-    entry_point: "set_eo_limits.py"
-    pack: "bitesize"
-    description: "set LimitRange k8s resource payload for the Environment Operator deployment"
-    runner_type: python-script
-    enabled: true
-    parameters:
-        namespace:
-          type: "string"
-          required: true
-    
+  name: "set_eo_limits"
+  entry_point: "set_eo_limits.py"
+  pack: "bitesize"
+  description: "set K8S LimitRange resource payload for the Environment Operator deployment"
+  runner_type: python-script
+  enabled: true
+  parameters:
+    namespace:
+      type: "string"
+      required: true
   
