--- a/actions/set_eo_role.yaml
+++ b/actions/set_eo_role.yaml
@@ -1,11 +1,11 @@
 ---
-name: "set_eo_role"
-entry_point: "set_eo_role.py"
-pack: "bitesize"
-description: "set Role k8s resource payload for the Environment Operator"
-runner_type: python-script
-enabled: true
-parameters:
-  namespace:
-    type: "string"
-    required: true
+  name: "set_eo_role"
+  entry_point: "set_eo_role.py"
+  pack: "bitesize"
+  description: "set K8S Role resource payload for the Environment Operator deployment"
+  runner_type: python-script
+  enabled: true
+  parameters:
+    namespace:
+      type: "string"
+      required: true
