--- a/actions/set_eo_svc.yaml
+++ b/actions/set_eo_svc.yaml
@@ -1,11 +1,11 @@
 ---
-    name: "set_eo_svc"
-    entry_point: "set_eo_svc.py"
-    pack: "bitesize"
-    description: "set Service k8s resource for Environment Operator"
-    runner_type: python-script
-    enabled: true
-    parameters:
-        namespace:
-          type: "string"
-          required: true
+  name: "set_eo_svc"
+  entry_point: "set_eo_svc.py"
+  pack: "bitesize"
+  description: "set K8S Service resource for Environment Operator deployment"
+  runner_type: python-script
+  enabled: true
+  parameters:
+    namespace:
+      type: "string"
+      required: true
