files with format

--- a/actions/create_eo.yaml
+++ b/actions/create_eo.yaml
@@ -18,7 +18,7 @@ workflows:
       - awsRegion
       - image
       - ingressHost
-      - hostZoneID: "Z10308243O3W8MXERVWSX"
+      - hostZoneID: "Z2AIIKJP90E872"
 
     tasks:
       set_eo_limits:
